colores inputs + beneficios flexwrap fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -281,3 +281,21 @@
   align-items: center;
   gap: 20px;
 }
+
+/* SCROLLBAR DISABLE */
+
+/* Hide scrollbars but maintain functionality */
+/* For Webkit browsers (Chrome, Safari, etc.) */
+::-webkit-scrollbar {
+  display: none;
+}
+
+/* For Firefox */
+* {
+  scrollbar-width: none;
+}
+
+/* For IE and Edge */
+* {
+  -ms-overflow-style: none;
+}
